[package]
name = "abc169"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc169-a = { alias = "a", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_a" }
abc169-b = { alias = "b", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_b" }
abc169-c = { alias = "c", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_c" }
abc169-d = { alias = "d", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_d" }
abc169-e = { alias = "e", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_e" }
abc169-f = { alias = "f", problem = "https://atcoder.jp/contests/abc169/tasks/abc169_f" }

[[bin]]
name = "abc169-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc169-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc169-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc169-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc169-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc169-f"
path = "src/bin/f.rs"

[dependencies]

[dev-dependencies]
